--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -1,17 +1,57 @@
 ---
-layout: basic
+layout: page
+title: page.title
+description: 관련 글의 목록입니다.
+background: '/img/bg-post.jpg'
 ---
-$page_title = '{{ page.title }}'
-$page_category = '{{ page.category }}'
-$page_total_posts = {{ page.total_posts }}
-$page_posts_title = [ {% for post in page.posts %}"{{ post.title }}", {% endfor %}]
-$page_posts_url = [ {% for post in page.posts %}"{{ post.url }}", {% endfor %}]
-{% if page.paginator %}{% assign paginator = page.paginator %}$page_paginator_total_posts = {{ paginator.total_posts }}
-$page_paginator_page = {{ paginator.page }}
-$page_paginator_per_page = {{ paginator.per_page }}
-$page_paginator_total_pages = {{ paginator.total_pages }}
-$page_paginator_previous_page = {% if paginator.previous_page %}{{ paginator.previous_page }}{% else %}nil{% endif %}
-$page_paginator_next_page = {% if paginator.next_page %}{{ paginator.next_page }}{% else %}nil{% endif %}
-$page_paginator_previous_page_path = '{{ paginator.previous_page_path }}'
-$page_paginator_next_page_path = '{{ paginator.next_page_path }}'
-$page_paginator_posts_title = [ {% for post in paginator.posts limit:paginator.per_page %}"{{ post.title }}", {% endfor %}]{% endif %}
+{% if page.paginator %}
+
+<!-- Pagination is active -->
+{% assign paginator = page.paginator %}
+<h3>{{ page.title }} (총 {{ paginator.total_posts }}개의 글)</h3>
+<section>
+    <!-- Show post excerpts for the current page -->
+    {% for post in paginator.posts limit:paginator.per_page %}
+    <article class="post-preview">
+        <a href="{{ post.url | prepend: site.baseurl | replace: '//', '/' }}">
+            <h5 class="post-title">{{ post.title }}</h5>
+            {% if post.subtitle %}
+            <h6 class="post-subtitle">{{ post.subtitle }}</h6>
+            {% else %}
+            <h6 class="post-subtitle">{{ post.excerpt | strip_html | truncatewords: 15 }}</h6>
+            {% endif %}
+        </a>
+        <p class="post-meta">Posted on {{ post.date | date: '%B %d, %Y' }}</p>
+    </article>
+    <hr>
+    {% endfor %}
+</section>
+<!-- Show navigation next/previous page links if applicable -->
+{% if paginator.total_pages > 1 %}
+<div class="clearfix">
+    {% if paginator.previous_page %}
+    <a class="btn btn-primary float-left" href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&larr; 최신<span class="d-none d-md-inline"> 글</span></a>
+    {% endif %}
+    {% if paginator.next_page %}
+    <a class="btn btn-primary float-right" href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">예전<span class="d-none d-md-inline"> 글</span> &rarr;</a>
+    {% endif %}
+</div>
+{% endif %}
+
+{% else %}
+
+<!-- Pagination is not active -->
+<h1>Category index for &ldquo;{{ page.title }}&rdquo;</h1>
+
+<section>
+    <!-- Show excerpts for all posts in this category -->
+    {% for post in page.posts %}
+    <article>
+        <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
+        <h5>{{ post.date }}</h5>
+        <p>{{ post.excerpt }}</p>
+    </article>
+    {% endfor %}
+</section>
+
+{% endif %}
