--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -34,33 +34,24 @@ layout: default
 
         <article class="post-preview">
           <a href="{{ post.url | prepend: site.baseurl | replace: '//', '/' }}">
-            <h2 class="post-title">{{ post.title }}</h2>
+            <h4 class="post-title">{{ post.title }}</h4>
             {% if post.subtitle %}
-            <h3 class="post-subtitle">{{ post.subtitle }}</h3>
+            <h6 class="post-subtitle">{{ post.subtitle }}</h6>
             {% else %}
-            <h3 class="post-subtitle">{{ post.excerpt | strip_html | truncatewords: 15 }}</h3>
+            <h6 class="post-subtitle">{{ post.excerpt | strip_html | truncatewords: 15 }}</h6>
             {% endif %}
           </a>
-          <p class="post-meta">Posted by
-            {% if post.author %}
-            {{ post.author }}
-            {% else %}
-            {{ site.author }}
-            {% endif %}
-            on
-            {{ post.date | date: '%B %d, %Y' }} &middot; {% include read_time.html content=post.content %}            
-          </p>
-        </article>
+          <p class="post-meta">Posted on {{ post.date | date: '%B %d, %Y' }}</p>
+          </article>
 
-        <hr>
 
-        {% endfor %}
+          {% endfor %}
 
-        <!-- Pager -->
-        <div class="clearfix">
-          <a class="btn btn-primary float-right" href="{{"/posts" | relative_url }}">View All Posts &rarr;</a>
+          <!-- Pager -->
+          <div class="clearfix">
+            <a class="btn btn-primary float-right" href="{{"/posts" | relative_url }}">모든 글 보기 &rarr;</a>
+          </div>
+
         </div>
-
       </div>
     </div>
-  </div>
